--- a/index.html
+++ b/index.html
@@ -5,38 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/CSS" href="style.css">
+
+    <style>
+    .center{
+        margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+    }
+    </style>
 </head>
 <body>
     Wireframe homework
 
-    <header>
-        Header
-    </header>
-<nav>
-    Nav
-</nav>
-<div class="situation">
-<section>  
-    Section 
-    <article>
-        Arcticle
-        <h1></h1>
-    <h2></h2>
-    <h3></h3>
-    </article>
-</section>
-<aside>
-    aside
-</aside>
-</div>
-<footer>
-    Footer
-</footer>
+    <h1>wireframe is for to understand how the web works</h1>
+    <h2> Learning about html is very intersting, but require pation</h2>
+    <h3>Just practrice</h3>
 
-    
-
-    <!-- <p class="center style " Header p> -->
-
+    <p class="center">  html is very interting aspect of the webdesign. one must understand it to complete any assigment</p>
 </body>
 </html>
