--- a/index.html
+++ b/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <style>
-    .center{
-        margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-    }
-    </style>
+    <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
+
 <body>
     Wireframe homework
 
-    <h1>wireframe is for to understand how the web works</h1>
-    <h2> Learning about html is very intersting, but require pation</h2>
-    <h3>Just practrice</h3>
+    <header>
+        Header
+    </header>
+    <nav>
+        Nav
+    </nav>
 
-    <p class="center">  html is very interting aspect of the webdesign. one must understand it to complete any assigment</p>
+    <div class="container">
+
+        <section>
+            Section
+            <article>
+                Arcticle
+                <p class="clasName"><b>h1, h2, h3</b></p>
+                <p> P </p>
+            </article>
+        </section>
+        <aside>
+            <p class="classlife">aside </p>
+        </aside>
+    </div>
+
+    <div class="clearfix"></div>
+
+
+    <footer>
+        <p> footer </p>
+    </footer>
+
+
+
+    <!-- <p class="center style " Header p> -->
+
 </body>
+
 </html>
